# Geopack2008

./: .gitignore  BRADIAL.f  GEOPACK-2008.f  GEOPACK-2008_dp.f  README.md  T01_01.f  T96.f  example1.f  generate_foot_point.m  generate_foot_point_input.m  meson.build  nithin_find_foot_point.m  nithin_find_foot_point_fast.m  run_T01_Fast.f  run_T01_v1.f  run_T96  run_T96.f  run_T96_Fast  run_T96_Fast.f  testRead.f
.github/workflows/: ci.yml
